--- a/ProyectoServlet/pom.xml
+++ b/ProyectoServlet/pom.xml
@@ -25,11 +25,21 @@
             <version>5.0.0</version>
             <scope>provided</scope>
         </dependency>
+        
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.9.0</version>
+		</dependency>
+
         <dependency>
             <groupId>com.opencsv</groupId>
             <artifactId>opencsv</artifactId>
             <version>4.6</version>
         </dependency>
+        
+   
      
    
     </dependencies>
